--- a/app/views/story_levels/map.html.erb
+++ b/app/views/story_levels/map.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <%= button_to "Start Fight", fights_path, method: :post, params: {story_level: params[:id]} %>
+  <%= button_to "Start Fight", fights_path, method: :post %>
 </div>
