created the basic layout with some buttons. Set up the initial logic to create fight_questions, but it seems that it doesn't properly create a question yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,12 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-<%= render "shared/flashes" %>
+  <body>
+    <% unless content_for?(:hide_navbar) %>
+      <%= render 'shared/navbar' %>
+    <% end %>
+
+    <%= render "shared/flashes" %>
 
     <%= yield %>
   </body>
