--- a/app/views/fights/_menu_contents.html.erb
+++ b/app/views/fights/_menu_contents.html.erb
@@ -1,5 +1,5 @@
 <div id="menu-buttons" class="d-grid gap-2 w-75">
-  <%= button_to "Random", fight_fight_questions_path(@fight), params: { question_type: "random" }, method: :post, class: "btn btn-primary" %>
+  <%= button_to "Random", fight_fight_questions_path(@fight), params: { question_type: "random" }, data: { turbo_method: :post }, class: "btn btn-primary" %>
   <%= button_to "Kanji", fight_fight_questions_path(@fight), params: { question_type: "kanji" }, method: :post, class: "btn btn-success" %>
   <%= button_to "Tango", fight_fight_questions_path(@fight), params: { question_type: "words" }, method: :post, class: "btn btn-warning" %>
   <%= button_to "Bumpo", fight_fight_questions_path(@fight), params: { question_type: "grammar" }, method: :post, class: "btn btn-danger" %>
