--- a/app/views/fight_questions/show.html.erb
+++ b/app/views/fight_questions/show.html.erb
@@ -1,11 +1,48 @@
-<div class="question-container">
-  <h2><%= @question.question %></h2>
-  <div class="answers">
-    <% @question.answers.each_with_index do |answer,index| %>
-      <%= simple_form_for @fight_question do |f| %>
-        <input type="hidden" name="fight_question[selected_index]" value="<%= index %>">
-        <button> <%= answer %></button>
-      <% end %>
-    <% end %>
+<% content_for :hide_navbar, true %>
+<%#
+div for the enemy: it takes up the top 1/3. Left side div holds the hpbar, right side div holds the sprite
+div for the player: it takes up the bottom 2/3
+div for the text box: it takes up the bottom 1/3 and holds a transparent card with the textbox %>
+
+<div class="container-fluid vh-100 d-flex flex-column p-0">
+
+  <div id="scene" class="flex-fill d-flex flex-column justify-content-center align-items-center">
+    <h1>scene</h1>
+
+    <div id="player">
+      <div id="player-hitpoints">
+
+      </div>
+    </div>
+
+    <div id="enemy">
+      <div id="enemy-hitpoints">
+
+      </div>
+    </div>
+
+    <div id="textbox">
+
+    </div>
+
   </div>
+
+  <%# middle of the page %>
+
+  <div id="menu" class="flex-fill d-flex flex-column justify-content-center align-items-center bg-dark">
+    <div id="menu-contents">
+      <div class="question-container">
+        <h2><%= @question.question %></h2>
+        <div class="answers">
+          <% @question.answers.each_with_index do |answer,index| %>
+            <%= simple_form_for @fight_question do |f| %>
+              <input type="hidden" name="fight_question[selected_index]" value="<%= index %>">
+              <button> <%= answer %></button>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
