--- a/app/views/fights/show.html.erb
+++ b/app/views/fights/show.html.erb
@@ -1,8 +1,8 @@
 <% content_for :hide_navbar, true %>
-
+<%#
 div for the enemy: it takes up the top 1/3. Left side div holds the hpbar, right side div holds the sprite
 div for the player: it takes up the bottom 2/3
-div for the text box: it takes up the bottom 1/3 and holds a transparent card with the textbox
+div for the text box: it takes up the bottom 1/3 and holds a transparent card with the textbox %>
 
 <div class="container-fluid vh-100 d-flex flex-column p-0">
 
@@ -29,9 +29,7 @@ div for the text box: it takes up the bottom 1/3 and holds a transparent card wi
 
   <%# middle of the page %>
 
-  <div id="menu" class="flex-fill d-flex flex-column justify-content-center align-items-center bg-light">
-    <h1>menu</h1>
-
+  <div id="menu" class="flex-fill d-flex flex-column justify-content-center align-items-center bg-dark">
     <div id="menu-contents">
       <%= render 'menu_contents' %>
     </div>
