--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -1,7 +1,23 @@
+#scene {
+  height: 60vh;
+}
+
+#menu-contents {
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 #menu-buttons {
   width: 80%;
   max-width: 600px;
   margin: 0 auto;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 
   .btn {
     width: 100%;
