--- a/app/views/fight_questions/show.html.erb
+++ b/app/views/fight_questions/show.html.erb
@@ -28,17 +28,13 @@
   <div id="menu" class="flex-fill d-flex flex-column justify-content-center align-items-center bg-dark">
     <div id="menu-contents">
       <div class="question-container">
-        <div class="answers">
-          <div id="menu-contents">
-            <div id="menu-buttons" class="w-75 bg-dark">
-              <% @question.answers.each_with_index do |answer,index| %>
-                <%= simple_form_for @fight_question do |f| %>
-                  <input type="hidden" name="fight_question[selected_index]" value="<%= index %>">
-                  <button class="btn"> <%= answer %></button>
-                <% end %>
-              <% end %>
-            </div>
-          </div>
+        <div id="menu-buttons" class="answers w-75 bg-dark">
+          <% @question.answers.each_with_index do |answer,index| %>
+            <%= simple_form_for @fight_question do |f| %>
+              <input type="hidden" name="fight_question[selected_index]" value="<%= index %>">
+              <button class="btn"> <%= answer %></button>
+            <% end %>
+          <% end %>
         </div>
       </div>
     </div>
