Added default css variables and styles. Changed fight menu so that the buttons are 100% flexible and responsive. Changed fight show.html.erb to be fixed heights.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,9 @@
 @import "config/bootstrap_variables";
 
 // External libraries
+@import "theme1/variables"; // variables come before bootstrap
 @import "bootstrap";
+@import "theme1/styles"; // styles come after bootstrap
 @import "font-awesome";
 
 // Your CSS partials
