--- a/app/views/fight_questions/show.html.erb
+++ b/app/views/fight_questions/show.html.erb
@@ -1,43 +1,32 @@
 <% content_for :hide_navbar, true %>
-
 <div class="container-fluid vh-100 d-flex flex-column p-0">
-
   <div id="scene" class="flex-fill d-flex flex-column justify-content-center align-items-center">
     <h1>scene</h1>
-
     <div id="player">
       <div id="player-hitpoints">
-
       </div>
     </div>
-
     <div id="enemy">
       <div id="enemy-hitpoints">
-
       </div>
     </div>
-
     <div id="textbox">
       <h2><%= @question.question %></h2>
     </div>
-
   </div>
-
   <%# middle of the page %>
-
   <div id="menu" class="flex-fill d-flex flex-column justify-content-center align-items-center bg-dark">
     <div id="menu-contents">
       <div class="question-container">
-        <div id="menu-buttons" class="answers w-75 bg-dark">
+        <div id="menu-buttons" class="answers bg-dark">
           <% @question.answers.each_with_index do |answer,index| %>
             <%= simple_form_for @fight_question do |f| %>
               <input type="hidden" name="fight_question[selected_index]" value="<%= index %>">
-              <button class="btn"> <%= answer %></button>
+              <button class="btn btn-primary"> <%= answer %></button>
             <% end %>
           <% end %>
         </div>
       </div>
     </div>
   </div>
-
 </div>
