--- a/app/views/fight_questions/index.html.erb
+++ b/app/views/fight_questions/index.html.erb
@@ -68,7 +68,7 @@
                   <div class="collapse" id="question-<%= fq.id %>">
                     <div class="card card-body bg-white mt-2">
                       <!-- Full Question -->
-                      <div class="mb-3">
+                      <div class="mb-3 text-dark">
                         <strong>質問:</strong>
                         <p class="mb-2"><%= question.question %></p>
                       </div>
