--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -3,9 +3,9 @@
 // REMOVE THIS!
 // DEEEEEBUGGGGGGGG
 // DEBUG - Remove when done
-* {
-  border: 1px solid red !important;
-}
+// * {
+//   border: 1px solid red !important;
+// }
 
 
 
@@ -73,7 +73,7 @@
   flex: 1; // Each takes 50% width
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   gap: 0rem;
 }
@@ -83,13 +83,13 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  padding-bottom: 1rem;
 
   .player-sprite {
-    height: 30vh;
+    height: 20vh;
     max-height: 100%;
     max-width: 100%;
     object-fit: contain;
+    padding-bottom: 0rem;
   }
 
   .enemy-sprite {
@@ -97,6 +97,7 @@
     max-height: 100%;
     max-width: 100%;
     object-fit: contain;
+    padding-bottom: 2rem;
   }
 }
 
