fixed some seed errors

--- a/app/views/story_levels/map.html.erb
+++ b/app/views/story_levels/map.html.erb
@@ -82,7 +82,7 @@
 </div>
 
 <nav class="bottom-nav">
-  <%= link_to "#", class: "nav-item" do %>
+  <%= link_to fights_path, class: "nav-item" do %>
     <span class="nav-icon"><i class="fa-solid fa-bookmark"></i></span>
     <span class="nav-label">Bookmarks</span>
   <% end %>
