--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -20,6 +20,7 @@
     flex: 1;
     display: flex;
   }
+
 }
 
 .btn-primary {
@@ -47,26 +48,26 @@
     }
 
     &.correct {
-      background-color: #22c55e;
-      border-color: #16a34a;
+      background-color: #059669;
+      border-color: #047857;
       transform: scale(1.02);
       box-shadow: 0 0 12px rgba(34, 197, 94, 0.5);
 
       &:disabled {
-        background-color: #22c55e;
-        border-color: #16a34a;
+        background-color: #059669;
+        border-color: #047857;
         opacity: 1;
       }
     }
 
     &.incorrect {
-      background-color: #ef4444;
-      border-color: #dc2626;
+      background-color: #b91c1c;
+      border-color: #991b1b;
       animation: shake 0.4s ease;
 
       &:disabled {
-        background-color: #ef4444;
-        border-color: #dc2626;
+        background-color: #b91c1c;
+        border-color: #991b1b;
         opacity: 1;
       }
     }
