--- a/app/views/fights/index.html.erb
+++ b/app/views/fights/index.html.erb
@@ -2,12 +2,12 @@
 <h2 class="text-center my-3"> Your Fights </h2>
 <div class="container">
   <% @fights.each do |fight| %>
-  <div class="card fight-card my-3 p-3">
+  <div class="card fight-card my-3 p-3 mx-3">
     <button class="w-100 p-0 text-start border-0 bg-transparent"type="button"data-bs-toggle="collapse"
       data-bs-target="#fight-<%= fight.id %>"
       aria-expanded="false"
       aria-controls="fight-<%= fight.id %>">
-      <div class="d-flex align-items-center justify-content-between">
+      <div class="d-flex align-items-center justify-content-between px-3">
         <h2 class="m-0 text-white">Fight <%= "#{fight.id} : #{fight.status.capitalize}" %></h2>
         <span class="dropdown-arrow text-white">▼</span>
       </div>
@@ -75,7 +75,7 @@
   <nav class="bottom-nav">
     <%= link_to fights_path, class: "nav-item #{'nav-item-active' if current_page?(fights_path)}" do %>
       <span class="nav-icon"><i class="fa-solid fa-bookmark"></i></span>
-      <span class="nav-label">Bookmarks</span>
+      <span class="nav-label">Fight History</span>
     <% end %>
 
     <%= link_to map_path, class: "nav-item #{'nav-item-active' if current_page?(map_path)}" do %>
