--- a/app/views/story_levels/map.html.erb
+++ b/app/views/story_levels/map.html.erb
@@ -84,7 +84,7 @@
 <nav class="bottom-nav">
   <%= link_to fights_path, class: "nav-item #{'nav-item-active' if current_page?(fights_path)}" do %>
     <span class="nav-icon"><i class="fa-solid fa-bookmark"></i></span>
-    <span class="nav-label">Bookmarks</span>
+    <span class="nav-label">Fight History</span>
   <% end %>
 
   <%= link_to map_path, class: "nav-item #{'nav-item-active' if current_page?(map_path)}" do %>
