basic damage display functionality achieved

--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -3,9 +3,9 @@
 // REMOVE THIS!
 // DEEEEEBUGGGGGGGG
 // DEBUG - Remove when done
- * {
-   border: 1px solid red !important;
- }
+// * {
+//   border: 1px solid red !important;
+// }
 
 
 // If we need a card
@@ -148,7 +148,7 @@
   font-size: 2rem;
   font-weight: bold;
   color: #ef4444;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
