--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -3,9 +3,9 @@
 // REMOVE THIS!
 // DEEEEEBUGGGGGGGG
 // DEBUG - Remove when done
- * {
-   border: 1px solid red !important;
- }
+//* {
+// border: 1px solid red !important;
+//}
 
 
 // If we need a card
