--- a/app/views/fight_questions/show.html.erb
+++ b/app/views/fight_questions/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :hide_navbar, true %>
+<!-- All data we need for answer_feedback Stimulus controller is being passed here -->
 <div class="container-fluid vh-100 d-flex flex-column p-0" data-controller="answer-feedback"
   data-answer-feedback-correct-index-value="<%= @question.correct_index %>"
   data-answer-feedback-damage-dealt-value="<%= 10 * @damage_multiplier %>"
@@ -7,7 +8,7 @@
   data-answer-feedback-player-max-hp-value="<%= @fight.user.hitpoints %>"
   data-answer-feedback-enemy-hp-value="<%= @fight.enemy_hitpoints %>"
   data-answer-feedback-enemy-max-hp-value="<%= @fight.enemy.hitpoints %>">
-  <div id="scene" class="d-flex">
+  <div id="scene" class="d-flex" data-answer-feedback-target="scene">
     <!-- Left side: Player -->
     <div class="character-container" data-answer-feedback-target="player">
       <div class="healthbar-container">
