--- a/app/views/fight_questions/show.html.erb
+++ b/app/views/fight_questions/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container-fluid vh-100 d-flex flex-column p-0" data-controller="answer-feedback"
   data-answer-feedback-correct-index-value="<%= @question.correct_index %>"
   data-answer-feedback-damage-dealt-value="<%= 10 * @damage_multiplier %>"
-  data-answer-feedback-damage-received-value="<%= @damage_received %>"
+  data-answer-feedback-damage-received-value="<%= 10 %>"
   data-answer-feedback-player-hp-value="<%= @fight.player_hitpoints %>"
   data-answer-feedback-player-max-hp-value="<%= @fight.user.hitpoints %>"
   data-answer-feedback-enemy-hp-value="<%= @fight.enemy_hitpoints %>"
