All text changed to Japanese

--- a/app/views/fight_questions/index.html.erb
+++ b/app/views/fight_questions/index.html.erb
@@ -30,10 +30,10 @@
                 </span>
               </div>
               <div class="text-end small text-muted mt-1">
-                You gained +<%= @exp_gained %>XP
+                +<%= @exp_gained %> 経験値
               </div>
               <div class="text-end small text-muted mt-1">
-                <%= "You have leveled up to level #{@user.level}!!!" if @level_up = true%>
+                <%= "レベル#{@user.level}に レベルアップしました！" if @level_up = true%>
               </div>
             </div>
           </div>
