fixed some bugs and working modal

--- a/app/views/fight_questions/index.html.erb
+++ b/app/views/fight_questions/index.html.erb
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="results-action">
-          <% if @map_compeleted %>
+          <% if @map_completed %>
             <%= link_to "マップに戻る", map_path(show_victory: true), class: 'btn btn-secondary w-100 py-3 fw-bold' %>
           <% else %>
             <%= link_to "続き", map_path, class: 'btn btn-secondary w-100 py-3 fw-bold'%>
