--- a/app/views/story_levels/_victory_modal.html.erb
+++ b/app/views/story_levels/_victory_modal.html.erb
@@ -25,7 +25,7 @@
             </div>
 
             <div class="stat-item">
-              <div class="stat-value"><%= @user.level %></div>
+              <div class="stat-value"><%=  %></div>
               <div class="stat-label">Current Level</div>
             </div>
           </div>
